<resources>
    <string name="app_name">UF1Act11(RelativeLayout)</string>
    <string name="enviar">Enviar</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="edat">Edat</string>
    <string name="usuari">Usuari</string>
    <string name="cognom">Cognom</string>
    <string name="nom">Nom</string>
    <string name="correu_eletronic">Correu eletrònic</string>
    <string name="telefon">Telèfon</string>
    <string name="genere">Gènere</string>
    <string name="Femeni">Femení</string>
    <string name="masculi">Masculí</string>
</resources>