<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout

            android:layout_width="412dp"
            android:layout_height="717dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/editTextText"
                android:layout_width="265dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="264dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"

                android:layout_marginStart="73dp"
                android:layout_marginTop="123dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/cognom"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="297dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/usuari"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="209dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/edat"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="377dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/contrasenya"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="920dp"
                android:layout_marginEnd="73dp"
                android:text="@string/enviar" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="195dp"
                android:layout_height="127dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="191dp"
                android:layout_marginTop="467dp"
                android:layout_marginEnd="26dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/masculi" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:text="@string/Femeni" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="106dp"
                android:layout_height="39dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="79dp"
                android:layout_marginTop="510dp"
                android:layout_marginEnd="227dp"
                android:text="@string/genere"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="647dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/telefon"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="758dp"
                android:layout_marginEnd="73dp"
                android:ems="10"
                android:hint="@string/correu_eletronic"
                android:inputType="textEmailAddress" />


        </RelativeLayout>





    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>